@@ -1,6 +1,11 @@
 2007-12-04  Hendrik Tews  <tews@tandem.cs.ru.nl>
 
         Semantic
+        * pass location to declaration_fun and give an error at the next assert
+        
+2007-12-04  Hendrik Tews  <tews@tandem.cs.ru.nl>
+
+        Semantic
         * fix importings, indentation
         * output expressions for static casts
         * fix static cast order
